registation page UI done

--- a/registration.html
+++ b/registration.html
@@ -5,8 +5,8 @@
   <meta charset="ISO-8859-1">
   <title>Registration Form</title>
 </head>
-
 <body>
+  <h1>Assignment Manager Registration </h1>
 </body>
 
 
