--- a/login.html
+++ b/login.html
@@ -3,21 +3,22 @@
 
 <head>
   <meta charset="ISO-8859-1">
-  <title>Registration Form</title>
+  <title>Login Page</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div align="center">
-    <h1>Assignment Manager Login</h1>
-    <form id="form" action="JSON.php" method="post">
-      <table style="with: 80%">
+    <h1> Login</h1>
+    <form id="form" action="" method="post">
+      <table >
         <tr>
-          <td>User ID</td>
-          <td><input type="text" name="userid" id="password" /></td>
+          <!-- <td>User ID</td> -->
+          <td><input type="text" name="userid" placeholder="USER ID" id="userid" /></td>
         </tr>
         <tr>
-          <td>Password</td>
-          <td><input type="password" name="password" id="passwod" /></td>
+          <!-- <td>Password</td> -->
+          <td><input type="password" placeholder="Password" name="password" id="password" /></td>
         </tr>
       </table>
       <br>
@@ -25,11 +26,11 @@
       <input type="submit" name="login" value="Login" />
 
     </form>
-
+<br>
     <a href="#"> Forgot Password </a>
-    <br>
-    <a href="registration.html"> Register here </a>
+    <a href="registration.html" style="padding-left: 10px;"> Sign Up here </a>
 
+</div>
 
 </body>
 
